--- a/qmstk-cmake/CMakeLists.txt
+++ b/qmstk-cmake/CMakeLists.txt
@@ -18,7 +18,7 @@ set_property(DIRECTORY PROPERTY EP_BASE ${CMAKE_BINARY_DIR}/subprojects)
 set(STAGED_INSTALL_PREFIX ${CMAKE_BINARY_DIR}/stage)
 message(STATUS "${PROJECT_NAME} staged install: ${STAGED_INSTALL_PREFIX}")
 
-set(EXECUTABLE_OUTPUT_PATH ${qmstk_BINARY_DIR}/bin CACHE PATH "Binary directory")
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${qmstk_BINARY_DIR}/bin CACHE PATH "Binary directory")
 
 find_package(LibXml2)
 
@@ -26,31 +26,29 @@ include(ExternalProject)
 ExternalProject_Add(ext_tests
   SOURCE_DIR
     ${CMAKE_CURRENT_LIST_DIR}/ext_tests
-  BINARY_DIR
-    ${EXECUTABLE_OUTPUT_PATH}
   CMAKE_ARGS 
   -DCMAKE_CXX_COMPILER=${CMAKE_CXX_COMPILER}
   -DCMAKE_C_COMPILER=${CMAKE_C_COMPILER}
   -DCMAKE_CXX_FLAGS=${CMAKE_CXX_FLAGS}
   -DCMAKE_C_FLAGS=${CMAKE_C_FLAGS}
+  -DCMAKE_RUNTIME_OUTPUT_DIRECTORY=${CMAKE_RUNTIME_OUTPUT_DIRECTORY}
+  -DLIBXML2_INCLUDE_DIR=${LIBXML2_INCLUDE_DIR}
+  -DLIBXML2_LIBRARY=${LIBXML2_LIBRARY}
+  INSTALL_COMMAND ""
+  )
+
+ExternalProject_Add(qmcpack
+  SOURCE_DIR 
+  ${CMAKE_CURRENT_LIST_DIR}/Source/qmcpack
+  CMAKE_ARGS 
+  -DCMAKE_CXX_COMPILER=${CMAKE_CXX_COMPILER}
+  -DCMAKE_C_COMPILER=${CMAKE_C_COMPILER}
+  -DCMAKE_CXX_FLAGS=${CMAKE_CXX_FLAGS}
+  -DCMAKE_C_FLAGS=${CMAKE_C_FLAGS}
+  -DCMAKE_RUNTIME_OUTPUT_DIRECTORY=${CMAKE_RUNTIME_OUTPUT_DIRECTORY}
   -DLIBXML2_INCLUDE_DIR=${LIBXML2_INCLUDE_DIR}
   -DLIBXML2_LIBRARY=${LIBXML2_LIBRARY}
   INSTALL_COMMAND ""
   )
 #  -DCMAKE_Fortran_COMPILER=${CMAKE_Fortran_COMPILER}
 #  -DCMAKE_Fortran_FLAGS=${CMAKE_Fortran_FLAGS}
-
-#  -DHDF5_DIR=${HDF5_DIR}
-#  -DLibXml2_DIR=${LibXml2_DIR}
-#find_package(HDF5)
-#find_package(LibXml2)
-#
-#add_executable(xml_read ext_tests/xml_read.cpp)
-#target_include_directories(xml_read
-#  PUBLIC
-#  ${LIBXML2_INCLUDE_DIR}
-#  )
-#target_link_libraries(xml_read
-#  PRIVATE
-#  ${LIBXML2_LIBRARIES}
-#  )
