Use configure with hdf5 and qmcpack-dp/sp & qe

--- a/qmstk-cmake/CMakeLists.txt
+++ b/qmstk-cmake/CMakeLists.txt
@@ -22,22 +22,13 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${qmstk_BINARY_DIR}/bin CACHE PATH "Binary di
 
 find_package(LibXml2)
 
-include(ExternalProject)
-ExternalProject_Add(ext_tests
-  SOURCE_DIR
-    ${CMAKE_CURRENT_LIST_DIR}/ext_tests
-  CMAKE_ARGS 
-  -DCMAKE_CXX_COMPILER=${CMAKE_CXX_COMPILER}
-  -DCMAKE_C_COMPILER=${CMAKE_C_COMPILER}
-  -DCMAKE_CXX_FLAGS=${CMAKE_CXX_FLAGS}
-  -DCMAKE_C_FLAGS=${CMAKE_C_FLAGS}
-  -DCMAKE_RUNTIME_OUTPUT_DIRECTORY=${CMAKE_RUNTIME_OUTPUT_DIRECTORY}
-  -DLIBXML2_INCLUDE_DIR=${LIBXML2_INCLUDE_DIR}
-  -DLIBXML2_LIBRARY=${LIBXML2_LIBRARY}
-  INSTALL_COMMAND ""
-  )
+#install libraries in stage
+add_subdirectory(external/hdf5)
 
-ExternalProject_Add(qmcpack
+include(ExternalProject)
+
+ExternalProject_Add(qmcpack-dp
+  DEPENDS phdf5
   SOURCE_DIR 
   ${CMAKE_CURRENT_LIST_DIR}/Source/qmcpack
   CMAKE_ARGS 
@@ -45,10 +36,47 @@ ExternalProject_Add(qmcpack
   -DCMAKE_C_COMPILER=${CMAKE_C_COMPILER}
   -DCMAKE_CXX_FLAGS=${CMAKE_CXX_FLAGS}
   -DCMAKE_C_FLAGS=${CMAKE_C_FLAGS}
-  -DCMAKE_RUNTIME_OUTPUT_DIRECTORY=${CMAKE_RUNTIME_OUTPUT_DIRECTORY}
+  -DCMAKE_INSTALL_PREFIX=${STAGED_INSTALL_PREFIX}/qmcpack-dp
   -DLIBXML2_INCLUDE_DIR=${LIBXML2_INCLUDE_DIR}
   -DLIBXML2_LIBRARY=${LIBXML2_LIBRARY}
-  INSTALL_COMMAND ""
+  -DENABLE_PHDF5=ON
+  -DHDF5_ROOT=${STAGED_INSTALL_PREFIX}
   )
-#  -DCMAKE_Fortran_COMPILER=${CMAKE_Fortran_COMPILER}
-#  -DCMAKE_Fortran_FLAGS=${CMAKE_Fortran_FLAGS}
+
+ExternalProject_Add(qmcpack-sp
+  DEPENDS phdf5
+  SOURCE_DIR 
+  ${CMAKE_CURRENT_LIST_DIR}/Source/qmcpack
+  CMAKE_ARGS 
+  -DCMAKE_CXX_COMPILER=${CMAKE_CXX_COMPILER}
+  -DCMAKE_C_COMPILER=${CMAKE_C_COMPILER}
+  -DCMAKE_CXX_FLAGS=${CMAKE_CXX_FLAGS}
+  -DCMAKE_C_FLAGS=${CMAKE_C_FLAGS}
+  -DCMAKE_INSTALL_PREFIX=${STAGED_INSTALL_PREFIX}/qmcpack-dp
+  -DLIBXML2_INCLUDE_DIR=${LIBXML2_INCLUDE_DIR}
+  -DLIBXML2_LIBRARY=${LIBXML2_LIBRARY}
+  -DENABLE_PHDF5=ON
+  -DHDF5_ROOT=${STAGED_INSTALL_PREFIX}
+  -DQMC_MIXED_PRECISION=1
+  )
+
+ExternalProject_Add(q-e
+  DEPENDS phdf5
+  SOURCE_DIR
+  ${CMAKE_CURRENT_LIST_DIR}/Source/q-e
+  CMAKE_ARGS
+  -DCMAKE_INSTALL_PREFIX=${STAGED_INSTALL_PREFIX}/qe
+  -DCMAKE_CXX_COMPILER=${CMAKE_CXX_COMPILER}
+  -DCMAKE_C_COMPILER=${CMAKE_C_COMPILER}
+  -DCMAKE_CXX_FLAGS=${CMAKE_CXX_FLAGS}
+  -DCMAKE_C_FLAGS=${CMAKE_C_FLAGS}
+  -DCMAKE_Fortran_COMPILER=${CMAKE_Fortran_COMPILER}
+  -DCMAKE_Fortran_FLAGS=${CMAKE_Fortran_FLAGS}
+  -DHDF5_ROOT=${STAGED_INSTALL_PREFIX}
+  -DLIBXML2_INCLUDE_DIR=${LIBXML2_INCLUDE_DIR}
+  -DLIBXML2_LIBRARY=${LIBXML2_LIBRARY}
+  -DHDF5_ROOT=${STAGED_INSTALL_PREFIX}
+  -DQE_ENABLE_OPENMP=OFF
+  -DQE_ENABLE_HDF5=ON
+  )
+
